# Flocode-Pynite-01

./: README.md  ReadMe.md  example.py  notebook.ipynb  pyproject.toml  requirements.txt
