[project]
name = "flocode-pynite-01"
version = "0.1.0"
description = "First tutorial in Pynite series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pynitefea>=0.0.96",
    "pyvista>=0.44.1",
    "scipy>=1.14.1",
    "vtk>=9.3.1",
]
